# jaco_adaptive_assistance

./: README.md  StudyProtocol.txt
src/backends/: package.xml
src/data_processing/: extract_rosbag.py
src/data_processing/scripts/: extract_topics_from_bag.py  generate_main_trial_dataframe.sh  generate_personalized_distributions_from_bags.sh  generate_personalized_p_phi_given_a.sh  main_study_concatenate_topics_per_trial.py  p_phi_given_a_distribution_preprocessing.py  p_phm_given_phi_distribution_preprocessing.py
src/data_processing/tests/: optimization_test.py
src/disamb_algo/: CMakeLists.txt  package.xml  setup.py
src/envs/: CMakeLists.txt  package.xml  setup.py
src/envs/msg/: PASSingleG.msg
src/envs/srv/: OptimalAction.srv  PASAllG.srv  SwitchModeSrv.srv
src/general_purpose/: CMakeLists.txt  package.xml
src/general_purpose/scripts/: generate_trials.py
src/general_purpose/src/: keyboard_input_to_topic.cpp
src/jaco_base/: ParametersOptimal_Z.txt  README.md
src/jaco_base/jaco_interaction/: CMakeLists.txt  package.xml  setup.py
src/jaco_base/jaco_interaction/launch/: custom_home_arm.launch  jaco_base.launch  jaco_base_teleop_test.launch  jaco_sim.launch  record.launch
src/jaco_base/jaco_interaction/msg/: DampState.msg
src/jaco_base/jaco_interaction/nodes/: custom_home_arm  dampening_zone  jaco_tracker
src/jaco_base/jaco_interaction/src/jaco_interaction/: __init__.py  moveit_helpers.py  waypoint_navigation.py
src/jaco_base/jaco_interaction/srv/: CustomHome.srv
src/jaco_base/jaco_teleop/: CMakeLists.txt  package.xml
src/jaco_base/udev_rules/: 66-tty.rules  README.md
src/jaco_intent_inference/: CMakeLists.txt  package.xml
src/jaco_intent_inference/msg/: BeliefInfo.msg
src/jaco_intent_inference/personalized_distributions/: deepak_p_phi_given_a.pkl  j01_p_phi_given_a.pkl  j01_p_phm_given_phi.pkl
src/jaco_intent_inference/scripts/: jaco_intent_inference_node.py
src/jaco_pfields_control/: CMakeLists.txt  package.xml  setup.py
src/jaco_pfields_node/: CMakeLists.txt  package.xml
src/jaco_pfields_node/msg/: ObsDesc.msg
src/jaco_pfields_node/scripts/: jaco_pfields_multiple_node.py
src/jaco_pfields_node/srv/: ComputeVelocity.srv  GoalPose.srv  InitPfields.srv  ObsDescList.srv
src/mdp/: CMakeLists.txt  package.xml  setup.py
src/simulators/: CMakeLists.txt  package.xml
src/simulators/cfg/: SipPuffTrainingParadigmConfig.cfg
src/simulators/launch/: jaco.launch  jaco_training.launch  p_phi_given_a_sim.launch  p_phm_given_phi_sim.launch  record.launch  sip_puff_training_simulator.launch
src/simulators/msg/: ContinuousState.msg  DiscreteState.msg  (+3 more)
src/teleop_nodes/: CMakeLists.txt  package.xml
(+77 files in other folders)
